Added intro to notebook

--- a/Regression Trees Project.ipynb
+++ b/Regression Trees Project.ipynb
@@ -23,7 +23,59 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Theory"
+    "## Introduction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Prediction trees are a particular kind of nonlinear predictive model. There are two varieties: regression trees and classification trees. Of course, we will be focused on regression trees. We use linear regression as a method of making quantitative predictions. However, linear regressions do not do well with a nonlinear models. A solution to this problem can be to partition the data into smaller regions where we are able to have more manageable linear interactions. We can recursively subdivide the partitions until we get extremely manageable pieces that can be estimated with simple regression models. This process is known as recursive partitioning. Hence, we use recursive partitioning to sort the data into small, manageable sections and then use a simple model for each part of the partition. \n",
+    "\n",
+    "We can represent the recursive partitioning process using a regression tree. Thus, each terminal node of the regression tree represents a part of the partition that has an estimate found using a simple model. The estimate found applies only to the specific partition. We navigate the tree by asking a sequence of questions about specific features for some point, x. Each question, usually refers to only a single attribute with a yes or no answer. For example, a question of the type could concern gender of the observation (i.e. is the observation male or not). The variables can be either continuous or discrete (but ordered). \n",
+    "\n",
+    "For classic regression trees, the model in each cell is just a constant estimate of Y. That is, suppose the points (x1,y1), (x2,y2), …, (xc,yc) are all the samples belonging to the node x. Then our model for x is: $$\\hat{y}=\\frac{1}{c} \\sum_{i=1}^{c}y_i$$ This is the sample mean of the dependent variable in that cell. This is a piecewise-constant model. There are several advantages to the piecewise-constant model:\n",
+    "\t\t\t\t\t\n",
+    "1. Making predictions is fast, since the calculation process is not complicated\n",
+    "2. It’s easy to understand what variables are important in prediction (look at the tree)\n",
+    "3. If some data is missing, we might not be able to go all the way down the tree to a leaf, but we can still make a prediction by averaging all the leaves in the subtree we do reach\n",
+    "4. The model gives a jagged response, so it can work when the true regression surface is not smooth. If it is smooth, though, the piecewise-constant surface can approximate it arbitrarily closely (with enough leaves)\n",
+    "5. There are fast, reliable algorithms to learn these trees \t\t\t\t\t\t\n",
+    "\n",
+    "One of the problems with clustering was that we needed to balance the informativeness of the clusters with parsimony, so as to not just put every point in its own cluster. Similarly, we could just end up putting every point in its own leaf-node, which would not be very useful. A typical stopping criterion is to stop growing the tree when further splits gives less than some minimal amount of extra information, or when they would result in nodes containing less than a small percentage of the total data.  \n",
+    "\n",
+    "Regression trees can be used to address problems in which we want to predict the value of a continuous variable from a set of continuous and/or categorical variables. \n",
+    "\n",
+    "Examples:\n",
+    "\n",
+    "Health (Type II Diabetes)\n",
+    "* Sugar Consumption (avg. grams per day) (continuous) \n",
+    "* Weight (continuous)\n",
+    "* Number of days per week with greater than 30 minutes of exercise (categorical) \n",
+    "* Age (continuous)\n",
+    "* Parent has diabetes (categorical) \n",
+    "* Hours worked/week (continuous)\n",
+    "\n",
+    "Election outcomes (voter-share) (continuous)\n",
+    "* State/Region (categorical)\n",
+    "* Campaign spending (continuous)\n",
+    "* Incumbent (categorical)\n",
+    "* Political Party (categorical)\n",
+    "* GDP Growth (continuous)\n",
+    "* General vs. Midterm Election (categorical)\n",
+    "\n",
+    "Selling prices of single family homes (continuous)\n",
+    "* Square footage (continuous)\n",
+    "* Style of home (categorical)\n",
+    "* Zip code/county/state/etc. (categorical)\n",
+    "* Median income of neighborhood/zip code (if area variable is larger than zip code) (continuous)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Analytical Framework"
    ]
   },
   {
@@ -57,6 +109,28 @@
    "metadata": {},
    "source": [
     "If we have enough data, we can use to train a model that will be able to use the same general idea to predict outcomes given new (similar) data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### The Algorithm"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The goal of the regression tree model is to minimize the sum of squared residuals, as in OLS regression. However, in the regression tree model, we are minimizing the sum of squared residuals for a given tree T.\n",
+    "The sum of squared residuals for a tree T is $$S=\\sum_{c\\in terminal nodes(T)}\\sum_{i\\in C}(y_i-m_c)^2$$ where $m_c=\\frac{1}{n_c}\\sum_{i\\in C}y_i$, the prediction for leaf c. We make our splits to minimize S.\n",
+    "\n",
+    "The Algorithm:\n",
+    "1. Start with a single node containing all points. Calculate $m_c$ and S. \n",
+    "2. If all the points in the node have the same value for all the independent variables, stop. Otherwise, search over all binary splits of all variables for the one which will reduce S as much as possible. IF the largest decrease in S would be less than some threshold delta, or one of the resulting nodes would contain less than q points, stop. Otherwise, take that split, creating two new nodes.\n",
+    "3. In each new node, go back to step 1. \n",
+    "\n",
+    "A more successful approach to finding regression trees uses the idea of cross-validation. We randomly divide our data into a training set and a testing set, (say, 50% training and 50% testing). We then apply the basic tree-growing algorithm to the training data only, with q = 1 and δ = 0 — that is, we grow the largest tree we can. This is generally going to be too large and will over-fit the data. We then use cross-validation to prune the tree. At each pair of terminal nodes with a common parent, we evaluate the error on the testing data, and see whether the sum of squares would be smaller by remove those two nodes and making their parent a terminal node. This is repeated until pruning no longer improves the error on the testing data. \n"
    ]
   },
   {
