--- a/Homework-2.ipynb
+++ b/Homework-2.ipynb
@@ -864,6 +864,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Drop top 1% and bottom 1% by sale prices\n",
+    "### This is a common practice with housing data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "In doing so we drop 86 rows of our training data. We can adjust this threshold later to see if it affects our mean squared error."
    ]
   },
