--- a/Regression Trees Project V2.ipynb
+++ b/Regression Trees Project V2.ipynb
@@ -232,49 +232,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "##############################################\n",
-    "sys.path.append('r:\\\\joepriceresearch\\\\python\\\\anaconda3\\\\lib\\\\site-packages')\n",
-    "import seaborn"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Quick hack for the stupid high-maintenance lab computers"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "import sys\n",
-    "sys.path.append('r:\\\\joepriceresearch\\\\python\\\\anaconda3\\\\lib\\\\site-packages')\n",
-    "import seaborn as sns"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 14,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "pd.set_option('display.float_format', lambda x: '{:.3f}'.format(x))\n",
     "import os\n",
+    "import seaborn as sns\n",
     "\n",
     "from scipy import stats\n",
     "from scipy.stats import norm, skew\n",
@@ -287,7 +253,12 @@
     "    pass\n",
     "warnings.warn = ignore_warn\n",
     "import matplotlib.pyplot as plt\n",
-    "%matplotlib inline"
+    "%matplotlib inline\n",
+    "\n",
+    "from sklearn.metrics import mean_squared_error, make_scorer, f1_score, classification_report, accuracy_score\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.model_selection import train_test_split, learning_curve, RandomizedSearchCV, GridSearchCV\n",
+    "from sklearn.tree import DecisionTreeRegressor"
    ]
   },
   {
@@ -322,9 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#os.chdir('R:\\\\JoePriceResearch\\\\austin_institute\\\\baseball_fatherhood\\\\All Data')\n",
@@ -334,9 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#isaac.head()"
@@ -345,9 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "df = pd.read_stata('PROP_CO_FOCO.dta')"
@@ -356,9 +321,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -561,9 +524,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -780,9 +741,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -824,9 +783,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#ID.head()"
@@ -844,9 +801,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#df.drop('PROP_VALCALC', axis = 1, inplace = True)\n"
@@ -862,9 +817,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#print(format(df.shape))"
@@ -904,9 +857,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -933,9 +884,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "df = df.drop(df[df['PROP_GROSSSQFT']>40000].index)"
@@ -951,9 +900,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -987,9 +934,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1176,9 +1121,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1213,9 +1156,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "missing_list = list(missing_data.index)\n",
@@ -1225,9 +1166,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1274,12 +1213,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
    "source": []
   },
   {
@@ -1330,9 +1267,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1406,33 +1341,70 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
    "source": [
-    "################################################"
+    "### Modeling"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'missingno'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-6c5235ad6816>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mmissingno\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mmsno\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mevaluation_metrics\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain_predictions\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest_predictions\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mrounding\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'missingno'"
+     ]
+    }
+   ],
+   "source": [
+    "def evaluation_metrics(y_train, y_test, train_predictions, test_predictions):\n",
+    "    rounding = 2\n",
+    "    print('Accuracy:')\n",
+    "    print(\"  Train: {}\".format(round(accuracy_score(y_train, train_predictions),rounding)), \"  Test: {}\".format(round(accuracy_score(y_test, test_predictions),rounding)))\n",
+    "\n",
+    "    print('Precision:')\n",
+    "    print(\"  Train: {}\".format(round(precision_recall_fscore_support(y_train, train_predictions)[0][0],rounding)), \"  Test: {}\".format(round(precision_recall_fscore_support(y_test, test_predictions)[0][0],rounding)))\n",
+    "\n",
+    "    print('Recall:')\n",
+    "    print(\"  Train: {}\".format(round(precision_recall_fscore_support(y_train, train_predictions)[1][0],rounding)), \"  Test: {}\".format(round(precision_recall_fscore_support(y_test, test_predictions)[1][0],rounding)))\n",
+    "\n",
+    "    print('F1:')\n",
+    "    print(\"  Train: {}\".format(round(precision_recall_fscore_support(y_train, train_predictions)[2][0],rounding)), \"  Test: {}\".format(round(precision_recall_fscore_support(y_test, test_predictions)[2][0],rounding)))\n",
+    "\n",
+    "def precision_recall_curves(model, X, Y):\n",
+    "    # Determine probabilities for X and Y\n",
+    "    train_prediction_probabilities = model.predict_proba(X)\n",
+    "    train_probs_for_actual_1 = [train_prediction_probabilities[i][1] for i, truth in enumerate(Y) if truth == 1]\n",
+    "    train_probs_for_actual_0 = [train_prediction_probabilities[i][1] for i, truth in enumerate(Y) if truth == 0]\n",
+    "    \n",
+    "    # Create the figure by overlapping two histograms\n",
+    "    plt.figure(figsize = (8, 5))\n",
+    "    plt.hist(train_probs_for_actual_1, label='1')\n",
+    "    plt.hist(train_probs_for_actual_0, label='0')\n",
+    "    plt.legend(loc='upper left')\n",
+    "    plt.title(\"Precision Recall Curve\")\n",
+    "    plt.xlabel(\"Probability\")\n",
+    "    plt.ylabel(\"Frequency\")\n",
+    "\n",
+    "# Model with CLEAENED data\n",
+    "param_dist = {\"criterion\": ['gini', 'entropy']}\n",
+    "model = DecisionTreeRegressor()\n",
+    "dt = GridSearchCV(model, param_grid = param_dist, scoring='f1')\n",
+    "dt.fit(X_train, y_train)\n",
+    "dt_train_predictions = dt.predict(X_train)\n",
+    "dt_test_predictions = dt.predict(X_test)\n",
+    "print(\"Best Params: {}\".format(dt.best_params_))"
+   ]
   },
   {
    "cell_type": "code",
@@ -1518,21 +1490,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [Root]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "Python [Root]"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
