--- a/Regression-Trees-Project-V4.ipynb
+++ b/Regression-Trees-Project-V4.ipynb
@@ -116,7 +116,7 @@
     "\n",
     "Ideally, we want factors that are as predictive as possible. If men and women are equally likely to survive, the variable can't tell us much (barring interaction with other variables). Fortunately (depending on your perspective, but at least for prediction purposes), it turns out women are more likely than men to survive, so _sex_ will be an important factor in our tree.\n",
     "\n",
-    "That means that a node splitting on _sex_ has relatively low Gini impurity. A factor with high purity is very predictive of the outcome. Conversely, the impurity of a node would be maximized if equal proportions of its values (males and females here) survived.\n",
+    "That means that a node splitting on _sex_ has relatively low Gini impurity. Gini impurity measures the frequency of mislabeling a randomly selected element if it was randomly labeled by the distributions of labels in the subset. A factor with high purity is very predictive of the outcome. Conversely, the impurity of a node would be maximized if equal proportions of its values (males and females here) survived.\n",
     "\n",
     "Gini impurity is formally defined as:\n",
     "\n",
@@ -126,7 +126,21 @@
     "\n",
     "$$1-0.3^2-0.7^2 = 0.42$$\n",
     "\n",
-    "In general, it makes sense to grow a tree **greedily** - starting with the purest feature splits, then moving to the next.\n",
+    "Notice that 0.42 is medium probability of mislabelling \n",
+    "\n",
+    "Now suppose that 50% of the survivors were males, the Gini impurity of the _sex_node would be: \n",
+    "\n",
+    "$$1-0.5^2-0.5^2 = 0.5$$\n",
+    "\n",
+    "Notice here that the Gini impurity probability increased when splitting gender by 50 percent.\n",
+    "\n",
+    "Finally, suppose that only 10% of the survivors were females \n",
+    "\n",
+    "$$1-0.1^2-0.9^2 = 0.18$$\n",
+    "\n",
+    "Here, the huge disproportionate categorization allows Gini index to be very low, suggesting very low impurity \n",
+    "\n",
+    "In general, it makes sense to grow a tree **greedily** - starting with the lowest impurest feature splits, then moving to the next lowest impurest.\n",
     "\n",
     "\n",
     "Overfitting is a major concern with regression trees - you might get great scores within your training set, but then find that it generalizes poorly. As is often the case with decision trees, there is a tradeoff between bias, variance, and overfitting. The shallower the tree, the greater the bias and variance, but this may be preferable to overfitting. There are several hyperparameters you can include in the model to keep this from happening, such as:\n",
