--- a/Regression-Trees-Project-V4.ipynb
+++ b/Regression-Trees-Project-V4.ipynb
@@ -39,24 +39,24 @@
     "Examples:\n",
     "\n",
     "Health (Type II Diabetes)\n",
-    "* Sugar Consumption (avg. grams per day) (continuous) \n",
-    "* Weight (continuous)\n",
+    "* Does increasing sugar Consumption (avg. grams per day) affect whether you develop type II diabetes? (continuous) \n",
+    "* How does increasing weight affect whether you develop type II diabetes? (continuous)\n",
     "* Number of days per week with greater than 30 minutes of exercise (categorical) \n",
     "* Age (continuous)\n",
     "* Parent has diabetes (categorical) \n",
     "* Hours worked/week (continuous)\n",
     "\n",
     "Election outcomes (voter-share) (continuous)\n",
-    "* State/Region (categorical)\n",
-    "* Campaign spending (continuous)\n",
+    "* What State/Region tends to have greater voter-share? (categorical)\n",
+    "* How much does Campaign spending affect voter-share? (continuous)\n",
     "* Incumbent (categorical)\n",
     "* Political Party (categorical)\n",
     "* GDP Growth (continuous)\n",
     "* General vs. Midterm Election (categorical)\n",
     "\n",
     "Selling prices of single family homes (continuous)\n",
-    "* Square footage (continuous)\n",
-    "* Style of home (categorical)\n",
+    "* Does increasing Square footage increase prices for single family homes? (continuous)\n",
+    "* How much do the Style of home affect the selling price of single family homes? (categorical)\n",
     "* Zip code/county/state/etc. (categorical)\n",
     "* Median income of neighborhood/zip code (if area variable is larger than zip code) (continuous)\n"
    ]
