--- a/Regression-Trees-Project-V4.ipynb
+++ b/Regression-Trees-Project-V4.ipynb
@@ -140,7 +140,7 @@
     "\n",
     "Here, the huge disproportionate categorization allows Gini index to be very low, suggesting very low impurity \n",
     "\n",
-    "In general, it makes sense to grow a tree **greedily** - starting with the lowest impurest feature splits, then moving to the next lowest impurest.\n",
+    "In general, it makes sense to grow a tree **greedily** - starting with the least impure feature splits, then moving to the next least impure.\n",
     "\n",
     "\n",
     "Overfitting is a major concern with regression trees - you might get great scores within your training set, but then find that it generalizes poorly. As is often the case with decision trees, there is a tradeoff between bias, variance, and overfitting. The shallower the tree, the greater the bias and variance, but this may be preferable to overfitting. There are several hyperparameters you can include in the model to keep this from happening, such as:\n",
